--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "printWidth": 100,
+  "printWidth": 120,
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
   "useTabs": false,
   "singleQuote": true,
-  "jsxSingleQuote": false
+  "jsxSingleQuote": false,
+  "quoteProps": "preserve"
 }
