--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.2",
     "yup": "^1.4.0"
   },
